--- a/less/general.less
+++ b/less/general.less
@@ -41,7 +41,7 @@
 @media @mobile {
     .signup-header {
         background-image: url("/img/cover.jpeg");
-        height: 40vh;
+        height: 45vh;
         background-repeat: no-repeat;
         background-size: cover;
         color: @white;
@@ -50,7 +50,7 @@
         
         .title {
             h2{
-                margin-top: 3.30rem;
+                margin: 3.5rem 0 1rem 0;
                 color: @white;
                 width: 85%;
                 text-align: center;
@@ -63,7 +63,5 @@
                 }
             }
         }
-        
     }
-        
 }
