--- a/less/intro.less
+++ b/less/intro.less
@@ -4,7 +4,6 @@
 
     p {
         line-height: 1.5rem;
-        
     }
 
     button {
@@ -43,9 +42,10 @@
     } 
 
     p {
-        margin: 2rem 0 0 0;
+        margin: 3rem 0 3rem 0;
         font-size: 1.5rem;
         line-height: 1.5rem;
+        color: @darkgray;
     }
     
     .second-p {
@@ -53,10 +53,13 @@
     }
 
     button {
+        // margin-top: 4rem;
         border-radius: .25rem;
+        font-size: larger;
     }
 
     .about-us-button{
         display: block !important;
+        margin-bottom: 1rem;
     }
 }
